# infant_formula_comparison

./: .gitignore  README.md  main.py  plan_b.md  pyproject.toml
configs/: Consumer-Reports-Baby-Formula-Test-Results-v4-March-2026_columns original.json  Consumer-Reports-Baby-Formula-Test-Results-v4-March-2026_columns.json  Consumer-Reports-Test-Results-Infant-Formula-v2_columns original.json
inputs/: all_formula_ingredients_manual_entry.csv  all_formula_ingredients_manual_entry.xlsx
notebooks/: 01_process.ipynb  02_save_page_to_pdf.ipynb
outputs/: Consumer-Reports-Baby-Formula-Test-Results-v4-March-2026_p1_t0.csv  Consumer-Reports-Baby-Formula-Test-Results-v4-March-2026_p2_t0.csv  Consumer-Reports-Baby-Formula-Test-Results-v4-March-2026_p3_t0.csv  Consumer-Reports-Test-Results-Infant-Formula-v2_p1_t0.csv  Consumer-Reports-Test-Results-Infant-Formula-v2_p2_t0.csv  all_formula.csv  all_formula_ingredients.csv  all_formula_ingredients_soy_palm_flags.csv  all_formula_ingredients_soy_palm_flags.xlsx
scripts/: collate.py  extract_pdf_tables.py  manual_pdf_workflow.py  save_page.py  save_page_to_pdf_codex.py  save_pages_to_pdf_claude.md  save_pages_to_pdf_codex.md
src/infant_formula/: collate.py  extract_pdf_tables.py  manual_pdf_workflow.py  save_page.py  save_page_to_pdf_codex.py
