[project]
name = "infant-formula-comparison"
version = "0.1.0"
description = "Comparison of infant formula for contaminants and ingredients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "streamlit>=1.35",
    "plotly>=5.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infant_formula"]
